# Van-Emde-Boas-tree

./: .gitignore  CMakeLists.txt  Charts.py  Presentation van Emde Boas tree.pptx  README.md  Testing.cpp  Testing.h  VanEmdeBoasTree.cpp  main.cpp
FisherYatesShuffle/: FisherYatesShuffle.cpp  FisherYatesShuffle.h
Generated tests/: 1.in  1.out  2.in  2.out  3.in  3.out
Testing/: Testing.cpp  Testing.h  TestsGenerator.cpp  TestsGenerator.h
Tests/: 1.ans  1.in  10.in  11.in  12.ans  12.in  2.ans  2.in  3.ans  3.in  4.ans  4.in  5.ans  5.in  6.ans  6.in  7.ans  7.in  8.in  9.ans  9.in
vEB Tree/: VanEmdeBoasTree.cpp  VanEmdeBoasTree.h
vEB Tree arena/: VanEmdeBoasTreeArena.cpp  VanEmdeBoasTreeArena.h
